# zarqaa

./: .gitignore  Readme  Readme.md  start.sh  stop.sh
agent_framework/: .env.example  .gitignore  Dockerfile.txt  README.md  docker-compose.yml  docker-setup.sh  mcp-config.json  zarqa_axl_bridge.mjs
agent_framework/workspace-template/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  safety_guard.py
agent_framework/workspace-template/skills/zarqa-guard/: SKILL.md
app/: tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/analyze/: route.ts
app/app/api/analyze-intent/: route.ts
app/app/scanner/: page.tsx
app/components/scanner/: AnimatedLegCard.tsx  AnimatedVerdictBanner.tsx  BridgeInfoCard.tsx  FlightPathVisualization.tsx  IntentResolutionCard.tsx  LegCard.tsx  MEVRiskCard.tsx  ProxyNodeVisualization.tsx  ScannerResults.tsx  SilenceWarning.tsx  UnscrambleText.tsx  VerdictBanner.tsx  WaitingForSignal.tsx
app/lib/: utils.ts
app/types/: api.ts
zarqaa-core/: Cargo.toml
zarqaa-core/src/adapters/: Cargo.toml
zarqaa-core/src/adapters/src/: lib.rs  mev.rs
zarqaa-core/src/adapters/src/evm/: config.rs  explorer.rs  feeds.rs  infra.rs  mod.rs  rpc.rs
zarqaa-core/src/adapters/src/intent/: claude.rs  mod.rs
zarqaa-core/src/adapters/tests/: integration.rs
zarqaa-core/src/adapters/tests/fixtures/: aave_trace.json  ccip_trace.json
zarqaa-core/src/gateway/: Cargo.toml
zarqaa-core/src/gateway/src/: main.rs  routes.rs  state.rs
zarqaa-core/src/main/: Cargo.toml
zarqaa-core/src/main/src/: main.rs
zarqaa-core/src/types/: Cargo.toml
zarqaa-core/src/types/src/: chain.rs  error.rs  lib.rs  report.rs
