[workspace]
resolver = "2"
members = [
    "src/types",
    "src/adapters",
]
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
alloy = { version = "1", features = [
    "providers",
    "rpc-types",
    "transport-http",
    "contract",
] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
ulid = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
