[package]
name = "zarqa-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
zarqa-types = { path = "../types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = "0.15"
