[package]
name = "zarqaa-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zarqaa-gateway"
path = "src/main.rs"

[dependencies]
zarqaa-types    = { path = "../types" }
zarqaa-adapters = { path = "../adapters" }
axum            = { workspace = true }
tower-http      = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
futures  = { workspace = true }
dotenvy  = "0.15"
