[package]
name = "zarqaa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zarqaa"
path = "src/main.rs"

[dependencies]
zarqaa-types    = { path = "../types" }
zarqaa-adapters = { path = "../adapters" }
tokio          = { workspace = true }
serde_json     = { workspace = true }
dotenvy        = "0.15"
