[package]
name = "zarqaa-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
reqwest = { workspace = true }
